--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
-    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +48,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
